fix scrollbar

--- a/app/css/global.css
+++ b/app/css/global.css
@@ -15,7 +15,7 @@ html {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
   height: 4px;
 }
 
